--- a/aht_report.html
+++ b/aht_report.html
@@ -65,6 +65,8 @@
                                     <select class="form-control" name="scope" id="scope" style="border: 1px solid black;color: black;">
                                         <option value="All">ALL</option>
                                         <option value="DA1">DA1</option>
+                                        <!-- <option value="DA2">DA2</option>
+                                        <option value="QC">QC</option> -->
                                         <option value="QA">QA</option>
                                     </select>
                                 </div>
