--- a/batchwisetracking.html
+++ b/batchwisetracking.html
@@ -102,10 +102,10 @@
                             <td>{{ location }}</td>
                             <td>{{v.inputcount}}</td>
                             <td>{{v.da1_count}}</td>
-                            <td>{{v.da2_count}}</td>
+                            <!-- <td>{{v.da2_count}}</td>
                             <td>{{ v.qc_queue }}</td>
                             <td>{{v.qc_count}}</td>
-                            <td>{{ v.qa_queue }}</td>
+                            <td>{{ v.qa_queue }}</td> -->
                             <td>{{v.qa_count}}</td>
                         </tr>
                         {% endfor %}
