--- a/hourly_target.html
+++ b/hourly_target.html
@@ -28,7 +28,8 @@
                                 style="border: 1px solid black; color: black;">
                                 <option value="All">All</option>
                                 <option value="DA1">DA1</option>
-
+                                <!-- <option value="DA2">DA2</option>
+                                <option value="QC">QC</option> -->
                                 <option value="QA">QA</option>
                             </select>
                         </div>
