--- a/l4_production.html
+++ b/l4_production.html
@@ -18,7 +18,7 @@
             <div class="table-responsive" style="max-height: 35vh;">
                 <table class="table table-striped table-bordered" style="width: 100%;border-collapse: collapse;">
                     <tbody>
-                        <tr>
+                        <!-- <tr>
                             <td id="txtwrap">
                                 <div class="row">
                                     <div class="col-3"><span><b>Id Value:</b> {{result.id_value|nan}} </span></div>
@@ -39,7 +39,7 @@
                                     {% endif %}
                                 </div>
                             </td>
-                        </tr>
+                        </tr> -->
                         <tr>
                             <td id="txtwrap"><b>Question:</b> {{result.question|nan}}</td>
                         </tr>
@@ -64,17 +64,17 @@
                         <tr>
                             <td id="txtwrap"
                                 style="background-color: #cfffd1 !important;font-size: medium;line-height: 1.5;">
-                                <b>Answer 1: &nbsp;</b>
-                                {{result.answer_one|linebreaks|safe|nan }}
+                                <b>nile_answer: &nbsp;</b>
+                                {{result.nile_answer|linebreaks|safe|nan }}
                             </td>
                         </tr>
-                        <tr>
+                        <!-- <tr>
                             <td id="txtwrap"
                                 style="background-color: #ffcdc9 !important;font-size: medium;line-height: 1.5;">
                                 <b>Answer 2: &nbsp;</b>
                                 {{result.answer_two|linebreaks|safe|nan }}
                             </td>
-                        </tr>
+                        </tr> -->
                         <tr>
                             <td id="txtwrap"
                                 style="background-color: #ffcdc9 !important;font-size: medium;line-height: 1.5;">
